Add node server for deploy app

--- a/package.json
+++ b/package.json
@@ -2,16 +2,25 @@
   "name": "zup-challenge",
   "version": "0.0.0",
   "license": "MIT",
+  "main" : "app.js",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --open",
+    "start": "ng serve --o",
     "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "postinstall" : "grunt sass:production && ng build -aot -prod"
+  },
+  "engines": {
+    "node": "~6.10.3",
+    "npm": "~3.10.5"
   },
   "private": true,
   "dependencies": {
+    "@angular/cli": "1.6.1",
+    "@angular/compiler-cli": "^5.0.0",
+    "@angular/language-service": "^5.0.0",
     "@angular/animations": "^5.0.0",
     "@angular/common": "^5.0.0",
     "@angular/compiler": "^5.0.0",
